--- a/vijay.html
+++ b/vijay.html
@@ -11,3 +11,7 @@
   several awards as an actor. Referred to as "Thalapathy" (transl. commander), Vijay has a significant fan 
   following.
 </p>
+
+<p>
+  Contact: 9876543210
+</p>
